--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ body {
   #right-body-part {
     background-position: center;
     background-size: cover;
-    height: 100vh;
     transition: all 0.5s;
     background: #fff8dc;
     width: 75%;
@@ -119,9 +118,11 @@ h1 {
     margin: 0 1.5rem 1.5rem 0;
     display: inline-block;
     width: 100%;
+    background-color: white;
     border: solid 2px black;
     padding: 5px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); */
+    box-shadow: 6px 8px 1px rgb(37 37 36 / 87%);
     border-radius: 5px;
     transition: all 0.25s ease-in-out;
     &:hover img {
